sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: not found: value i
    i=0
    ^AlgCombSort:9: error: not found: value i
    while (i+ecart<getNombreValeurs()) {
           ^AlgCombSort:10: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
                    ^AlgCombSort:10: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
                        ^AlgCombSort:10: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
                                     ^AlgCombSort:10: error: not found: value k
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
                                       ^AlgCombSort:11: error: not found: value i
      i+=1
      ^